--- a/module1/index.html
+++ b/module1/index.html
@@ -7,6 +7,7 @@
 	  <script src="app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/mainStylesheet.css">
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
     </style>
@@ -23,9 +24,14 @@
          <div class="form-group">
              <button class="btn btn-default" ng-click="count();">Check If Too Much</button>
          </div>
-         <div class="form-group message">
-					 {{ message  }}
+				 <div class="form-group" ng-show="showTotals">
+					 <span class="{{ type }}">Total number of spaces: {{ totalspaces }}</span><br/>
+					 <span class="{{ type }}">Total number of items: {{ totalitems }}</span><br/>
          </div>
+				 <div class="form-group" ng-show="showMessages">
+					 <span class="{{ type }}">{{ message }}</span><br/>
+					 <span class="Error">{{ ignoredspaces }}</span>
+				 </div>
    </div>
 
 </body>
