--- a/module2/index.html
+++ b/module2/index.html
@@ -31,7 +31,7 @@
   <div class="row">
 
     <!-- To Buy List -->
-    <div class="col-md-6" ng-controller='ToBuyListController'>
+    <div class="col-md-6" ng-controller='ToBuyListController as toBuyList'>
      <h2>To Buy:</h2>
 		 <table class='table table-condenssed table-striped'>
 		 	<thead>
@@ -40,16 +40,18 @@
 		 		</tr>
 		 	</thead>
 			<tbody>
-				<tr ng-repeat='item in shoppingList'>
-					<td>Buy {{ item.quantity }} {{ item.name }} <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></td>
+				<tr ng-repeat='item in toBuyList.shoppingList'>
+					<td>Buy {{ item.quantity }} {{ item.name }} <button class="btn btn-default" ng-click="toBuyList.buyItem(item)"><span class="glyphicon glyphicon-ok"></span> Bought</button></td>
 				</tr>
 			</tbody>
 		 </table>
-     <div class="emptyMessage">Everything is bought!</div>
+     <div class="emptyMessage" ng-if="toBuyList.shoppingListEmpty">
+			 <span ng-if="toBuyList.shoppingListEmpty">Everything is bought!</span>
+		 </div>
     </div>
 
     <!-- Already Bought List -->
-    <div class="col-md-6" ng-controller='AlreadyBoughtListController'>
+    <div class="col-md-6" ng-controller='AlreadyBoughtListController as boughtList'>
      <h2>Already Bought:</h2>
 		 <table class='table table-condenssed table-striped'>
 		 	<thead>
@@ -58,12 +60,14 @@
 		 		</tr>
 		 	</thead>
 			<tbody>
-				<tr>
-					<td ng-repeat="item in boughtList">Bought {{ item.quantity }} {{ item.name }} </td>
+				<tr ng-repeat="item in boughtList.items">
+					<td>Bought {{ item.quantity }} {{ item.name }} </td>
 				</tr>
 			</tbody>
 		 </table>
-     <div class="emptyMessage">Nothing bought yet.</div>
+     <div class="emptyMessage" ng-model="boughtList">
+			 <span ng-if="boughtList.boughtListEmpty">Nothing bought yet.</span>
+	 	 </div>
     </div>
   </div>
 </div>
