--- a/module3/index.html
+++ b/module3/index.html
@@ -1,28 +1,55 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NarrowItDownApp">
   <head>
     <title>Narrow Down Your Menu Choice</title>
+    <meta charset="UTF-8">
+    <script src="angular.min.js"></script>
+    <script src="app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
-<body>
+  <body>
    <div class="container">
     <h1>Narrow Down Your Chinese Menu Choice</h1>
 
-    <div class="form-group">
-      <input type="text" placeholder="search term" class="form-control">
+    <div ng-controller="NarrowItDownController as narrowController">
+      <div class="row">
+        <div class="form-group">
+          <input type="text" placeholder="search term" class="form-control" ng-model="narrowController.searchText">
+        </div>
+        <div class="form-group narrow-button">
+          <button class="btn btn-primary" ng-click="narrowController.getItems(narrowController.searchText)">Narrow It Down For Me!</button>
+        </div>
+      </div>
+      <div class="row">
+        <p>List of items found</p>
+        <table class="table table-condessed table-striped">
+          <header>
+            <tr>
+              <th>ID</th>
+              <th>Short Name</th>
+              <th>Name</th>
+              <th>Action</th>
+            </tr>
+          </header>
+          <body>
+            <tr ng-repeat="item in narrowController.items">
+              <td> {{ item.id }} </td>
+              <td> {{ item.short_name }} </td>
+              <td> {{ item.name }} </td>
+              <td> <button class="btn btn-sm btn-primary" ng-click="narrowController.removeItem(item.id)">Remove</button> </td>
+            </tr>
+          </body>
+        </table>
+      </div>
+
+      <!-- Bonus loader (see Bonus section of the assignment) -->
+      <items-loader-indicator></items-loader-indicator>
+
+      <!-- found-items should be implemented as a component -->
+      <found-items found-items="...." on-remove="...."></found-items>
     </div>
-    <div class="form-group narrow-button">
-      <button class="btn btn-primary">Narrow It Down For Me!</button>
-    </div>
-
-    <!-- Bonus loader (see Bonus section of the assignment) -->
-    <items-loader-indicator></items-loader-indicator>
-
-    <!-- found-items should be implemented as a component -->
-    <found-items found-items="...." on-remove="...."></found-items>
-  </div>
-
-</body>
+   </div>
+  </body>
 </html>
